force-app/main/default/objects/npsp__General_Accounting_Unit__c/fields/Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Opportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>General Accounting Units</relationshipLabel>
    <relationshipName>General_Accounting_Units</relationshipName>
    <type>Lookup</type>
</CustomField>