force-app/main/default/objects/npsp__General_Accounting_Unit__c/fields/Parent_Fund__c.field-meta.xml
<CustomField>
    <fullName>Parent_Fund__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Parent Fund</label>
    <referenceTo>npsp__General_Accounting_Unit__c</referenceTo>
    <relationshipLabel>Child Funds</relationshipLabel>
    <relationshipName>General_Accounting_Units</relationshipName>
    <type>Lookup</type>
</CustomField>