force-app/main/default/objects/npsp__General_Accounting_Unit__c/fields/Restricted__c.field-meta.xml
<CustomField>
    <fullName>Restricted__c</fullName>
    <label>Restricted?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Restricted</fullName>
            </value>
            <value>
                <fullName>Non-Restricted</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>