force-app/main/default/objects/npsp__General_Accounting_Unit__c/fields/Total_Budgeted_Amount__c.field-meta.xml
<CustomField>
    <fullName>Total_Budgeted_Amount__c</fullName>
    <label>Total Budgeted Amount</label>
    <summarizedField>Budget__c.Amount__c</summarizedField>
    <summaryForeignKey>Budget__c.Fund__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>